IGNITE-24458 Add Java API compatibility check